Add ex01(on going), update Makefile

--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -5,27 +5,34 @@
 #                                                     +:+ +:+         +:+      #
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/05/16 11:25:23 by yusengok          #+#    #+#              #
-#    Updated: 2024/05/16 15:01:04 by yusengok         ###   ########.fr        #
+#    Created: 2024/05/16 11:50:42 by yusengok          #+#    #+#              #
+#    Updated: 2024/05/16 15:00:21 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = megaphone
+NAME = awesome_phonebook
 
-SRCS = megaphone.cpp
+SRCS = main.cpp \
+		phonebook.cpp
+
+INCLUDE = includes/
+HEADER_FILEES = PhoneBook.class.hpp \
+			Contact.class.hpp
+HEADERS = $(addprefix $(INCLUDE), $(HEADER_FILES))
+
 OBJS_DIR = .objs/
 OBJS = $(addprefix $(OBJS_DIR), $(notdir $(SRCS:.cpp=.o)))
 DEPS = $(OBJS:.o=.d)
 
 CC = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -I$(INCLUDE)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC) $(CPPFLAGS) $^ -o $@
 
-$(OBJS_DIR)%.o: %.cpp Makefile
+$(OBJS_DIR)%.o: %.cpp $(HEADERS) Makefile
 	@mkdir -p $(OBJS_DIR)
 	$(CC) $(CPPFLAGS) -c $< -o $@ -MMD -MP
 
