--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/21 09:07:02 by yusengok          #+#    #+#              #
-#    Updated: 2024/05/21 11:54:52 by yusengok         ###   ########.fr        #
+#    Updated: 2024/05/23 14:15:13 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,17 +18,16 @@ OBJS_DIR = .objs/
 OBJS = $(addprefix $(OBJS_DIR), $(notdir $(SRCS:.cpp=.o)))
 DEPS = $(OBJS:.o=.d)
 
-CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CPPFLAGS) $^ -o $@
+	$(CXX) $(CPPFLAGS) $^ -o $@
 
 $(OBJS_DIR)%.o: %.cpp $(HEADER) Makefile
 	@mkdir -p $(OBJS_DIR)
-	$(CC) $(CPPFLAGS) -c $< -o $@ -MMD -MP
+	$(CXX) $(CPPFLAGS) -c $< -o $@ -MMD -MP
 
 -include $(DEPS)
 
