--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -6,17 +6,18 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/26 15:25:55 by yusengok          #+#    #+#              #
-#    Updated: 2024/06/26 15:42:18 by yusengok         ###   ########.fr        #
+#    Updated: 2024/06/27 08:33:31 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = HiThisIsBrain
 
 vpath %.cpp srcs
-SRCS = main.cpp
+FILES = main
+SRCS = $(addsuffix .cpp, $(FILES))
 
 OBJS_DIR = .objs/
-OBJS = $(addprefix $(OBJS_DIR), $(notdir $(SRCS:.cpp=.o)))
+OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
 DEPS = $(OBJS:.o=.d)
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
