--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -6,26 +6,27 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/26 15:58:15 by yusengok          #+#    #+#              #
-#    Updated: 2024/06/26 16:00:32 by yusengok         ###   ########.fr        #
+#    Updated: 2024/06/27 08:32:20 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = weapon
 
 vpath %.cpp srcs
-SRCS = main.cpp \
-		Weapon.cpp \
-		HumanA.cpp	\
-		HumanB.cpp
+FILES = main \
+		Weapon \
+		HumanA	\
+		HumanB
+SRCS = $(addsuffix .cpp, $(FILES))
 
 INCLUDE = includes/
-HEADER_FILEES = Weapon.hpp	\
-				HumanA.hpp	\
-				HumanB.hpp
-HEADERS = $(addprefix $(INCLUDE), $(HEADER_FILES))
+HEADER_FILEES = Weapon	\
+				HumanA	\
+				HumanB
+HEADERS = $(addprefix $(INCLUDE), $(addsuffix .hpp, $(HEADER_FILES)))
 
 OBJS_DIR = .objs/
-OBJS = $(addprefix $(OBJS_DIR), $(notdir $(SRCS:.cpp=.o)))
+OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
 DEPS = $(OBJS:.o=.d)
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -I$(INCLUDE)
