Update ex04 (trying to use classes / issue fix on going)

--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/27 08:33:58 by yusengok          #+#    #+#              #
-#    Updated: 2024/06/27 11:11:22 by yusengok         ###   ########.fr        #
+#    Updated: 2024/06/27 14:59:10 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,19 +14,22 @@ NAME = Replace
 
 vpath %.cpp srcs
 FILES = main \
-
+		Replacer	\
+		FileHandler	\
+		StringReplacer
 SRCS = $(addsuffix .cpp, $(FILES))
 
-#INCLUDE = includes/
-#HEADER_FILEES = 
-#HEADERS = $(addprefix $(INCLUDE), $(addsuffix .hpp, $(HEADER_FILES)))
+INCLUDE = includes/
+HEADER_FILEES = Replacer	\
+				FileHandler	\
+				StringReplacer
+HEADERS = $(addprefix $(INCLUDE), $(addsuffix .hpp, $(HEADER_FILES)))
 
 OBJS_DIR = .objs/
 OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
 DEPS = $(OBJS:.o=.d)
 
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98 
-#-I$(INCLUDE)
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -I$(INCLUDE)
 
 all: $(NAME)
 
