--- a/cpp08/ex00/Makefile
+++ b/cpp08/ex00/Makefile
@@ -6,7 +6,43 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/13 14:26:55 by yusengok          #+#    #+#              #
-#    Updated: 2024/08/13 14:26:56 by yusengok         ###   ########.fr        #
+#    Updated: 2024/08/13 15:02:55 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME = easyfind
+
+vpath %.cpp srcs
+FILES = main
+SRCS = $(addsuffix .cpp, $(FILES))
+
+INCLUDE = includes/
+HEADERS = easyfind.hpp	easyfind.tpp
+
+OBJS_DIR = .objs/
+OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
+DEPS = $(OBJS:.o=.d)
+
+CXX = c++
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(CXX) $(CPPFLAGS) -I$(INCLUDE) $^ -o $@
+
+$(OBJS_DIR)%.o: %.cpp Makefile
+	@mkdir -p $(OBJS_DIR)
+	$(CXX) $(CPPFLAGS) -I$(INCLUDE) -c $< -o $@ -MMD -MP
+
+-include $(DEPS)
+
+clean:
+	$(RM) -r $(OBJS_DIR)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: fclean
+	$(MAKE) all
+
+.PHONY: all clean fclean re
