Remove test files, add 42 header to whatever.hpp

--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -6,20 +6,18 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/29 13:38:33 by yusengok          #+#    #+#              #
-#    Updated: 2024/08/13 15:04:52 by yusengok         ###   ########.fr        #
+#    Updated: 2024/08/19 09:41:37 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = whatever
 
 vpath %.cpp srcs
-FILES = main	\
-		Fixed
+FILES = main
 SRCS = $(addsuffix .cpp, $(FILES))
 
 INCLUDE = includes/
-HEADER_FILEES = whatever	\
-				Fixed
+HEADER_FILEES = whatever
 HEADERS = $(addprefix $(INCLUDE), $(addsuffix .hpp, $(HEADER_FILES)))
 
 OBJS_DIR = .objs/
