--- a/cpp07/ex01/Makefile
+++ b/cpp07/ex01/Makefile
@@ -6,20 +6,18 @@
 #    By: yusengok <yusengok@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/12 08:02:32 by yusengok          #+#    #+#              #
-#    Updated: 2024/08/13 15:04:42 by yusengok         ###   ########.fr        #
+#    Updated: 2024/08/19 09:43:47 by yusengok         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = iter
 
 vpath %.cpp srcs
-FILES = main	\
-		Fixed
+FILES = main
 SRCS = $(addsuffix .cpp, $(FILES))
 
 INCLUDE = includes/
-HEADER_FILEES = iter	\
-				Fixed
+HEADER_FILEES = iter
 HEADERS = $(addprefix $(INCLUDE), $(addsuffix .hpp, $(HEADER_FILES)))
 
 OBJS_DIR = .objs/
