Update class definition, remove .tpp file, add a test

--- a/cpp08/ex02/Makefile
+++ b/cpp08/ex02/Makefile
@@ -17,7 +17,8 @@ FILES = main
 SRCS = $(addsuffix .cpp, $(FILES))
 
 INCLUDE = includes/
-HEADER_FILEES = MutantStack.hpp MutantStack.tpp
+HEADER_FILEES = MutantStack
+HEADERS = $(addprefix $(INCLUDE), $(addsuffix .hpp, $(HEADER_FILES)))
 
 OBJS_DIR = .objs/
 OBJS = $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILES)))
